# grexa-db

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/grexa-db/: Cargo.toml  README.md
crates/grexa-db-cli/: Cargo.toml
crates/grexa-db-cli/src/: main.rs
crates/grexa-db/src/: collection.rs  db.rs  frontmatter.rs  index.rs  lib.rs  query.rs  record.rs  schema.rs  validation.rs  view.rs
docs/: grexa-db-design.md  grexa-db-implementation-plan.md  grexa-db-scaling-rnd.md
docs/rnd/: measured-results.md
docs/rnd/prototype/: Cargo.toml.txt  README.md  indexdemo.rs  readparse.rs  topkdemo.rs
scripts/: bench.py  profile_scale.py  runmax.py
